compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> declist dec
Rule 3     declist -> eps
Rule 4     dec -> vardec
Rule 5     dec -> funcdec
Rule 6     vardec -> idlist COLON type SEMICOLON
Rule 7     funcdec -> FUNCTION ID LRB paramdecs RRB COLON type block
Rule 8     funcdec -> FUNCTION ID LRB paramdecs RRB block
Rule 9     type -> INTEGER
Rule 10    type -> FLOAT
Rule 11    type -> BOOLEAN
Rule 12    iddec -> lvalue ASSIGN exp
Rule 13    iddec -> lvalue
Rule 14    idlist -> idlist COMMA iddec
Rule 15    idlist -> iddec
Rule 16    paramdecs -> paramdecslist
Rule 17    paramdecs -> eps
Rule 18    paramdecslist -> paramdec
Rule 19    paramdecslist -> paramdecslist COMMA paramdec
Rule 20    paramdec -> ID LSB RSB COLON type
Rule 21    paramdec -> ID COLON type
Rule 22    block -> LCB stmtlist RCB
Rule 23    stmtlist -> stmtlist stmt
Rule 24    stmtlist -> eps
Rule 25    lvalue -> ID LRB explist RRB
Rule 26    lvalue -> ID
Rule 27    lvalue -> ID LSB exp RSB
Rule 28    case -> WHERE const COLON stmtlist
Rule 29    cases -> cases case
Rule 30    cases -> eps
Rule 31    stmt -> ostmt
Rule 32    stmt -> cstmt
Rule 33    ostmt -> WHILE LRB exp RRB ostmt
Rule 34    ostmt -> FOR LRB ID IN ID RRB ostmt
Rule 35    ostmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB ostmt
Rule 36    ostmt -> IF LRB exp RRB cstmt elseiflist ELSE ostmt
Rule 37    ostmt -> IF LRB exp RRB cstmt
Rule 38    ostmt -> IF LRB exp RRB ostmt
Rule 39    cstmt -> WHILE LRB exp RRB cstmt
Rule 40    cstmt -> FOR LRB ID IN ID RRB cstmt
Rule 41    cstmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB cstmt
Rule 42    cstmt -> IF LRB exp RRB cstmt elseiflist ELSE cstmt
Rule 43    cstmt -> simple
Rule 44    elseiflist -> elseiflist ELSEIF LRB exp RRB cstmt
Rule 45    elseiflist -> eps
Rule 46    simple -> block
Rule 47    simple -> vardec
Rule 48    simple -> ON LRB exp RRB LCB cases RCB SEMICOLON
Rule 49    simple -> RETURN exp SEMICOLON
Rule 50    simple -> exp SEMICOLON
Rule 51    simple -> PRINT LRB ID RRB SEMICOLON
Rule 52    relop -> GT
Rule 53    relop -> GE
Rule 54    relop -> LT
Rule 55    relop -> LE
Rule 56    relop -> EQ
Rule 57    relop -> NE
Rule 58    exp -> exp relop exp
Rule 59    exp -> lvalue
Rule 60    exp -> SUB exp
Rule 61    exp -> NOT exp
Rule 62    exp -> LRB exp RRB
Rule 63    exp -> lvalue ASSIGN exp
Rule 64    exp -> const
Rule 65    exp -> exp operator exp
Rule 66    operator -> AND
Rule 67    operator -> OR
Rule 68    operator -> SUM
Rule 69    operator -> SUB
Rule 70    operator -> MUL
Rule 71    operator -> DIV
Rule 72    operator -> MOD
Rule 73    const -> INTEGERNUMBER
Rule 74    const -> FLOATNUMBER
Rule 75    const -> TRUE
Rule 76    const -> FALSE
Rule 77    explist -> exp
Rule 78    explist -> explist COMMA exp
Rule 79    explist -> eps
Rule 80    eps -> <empty>

Terminals, with rules where they appear

AND                  : 66
ASSIGN               : 12 63
BOOLEAN              : 11
COLON                : 6 7 20 21 28
COMMA                : 14 19 78
DIV                  : 71
ELSE                 : 36 42
ELSEIF               : 44
EQ                   : 56
ERROR                : 
FALSE                : 76
FLOAT                : 10
FLOATNUMBER          : 74
FOR                  : 34 35 40 41
FUNCTION             : 7 8
GE                   : 53
GT                   : 52
ID                   : 7 8 20 21 25 26 27 34 34 40 40 51
IF                   : 36 37 38 42
IN                   : 34 40
INTEGER              : 9
INTEGERNUMBER        : 73
LCB                  : 22 48
LE                   : 55
LRB                  : 1 7 8 25 33 34 35 36 37 38 39 40 41 42 44 48 51 62
LSB                  : 20 27
LT                   : 54
MAIN                 : 1
MOD                  : 72
MUL                  : 70
NE                   : 57
NOT                  : 61
ON                   : 48
OR                   : 67
PRINT                : 51
RCB                  : 22 48
RETURN               : 49
RRB                  : 1 7 8 25 33 34 35 36 37 38 39 40 41 42 44 48 51 62
RSB                  : 20 27
SEMICOLON            : 6 35 35 41 41 48 49 50 51
SUB                  : 60 69
SUM                  : 68
TRUE                 : 75
WHERE                : 28
WHILE                : 33 39
error                : 

Nonterminals, with rules where they appear

block                : 1 7 8 46
case                 : 29
cases                : 29 48
const                : 28 64
cstmt                : 32 36 37 39 40 41 42 42 44
dec                  : 2
declist              : 1 2
elseiflist           : 36 42 44
eps                  : 3 17 24 30 45 79
exp                  : 12 27 33 35 35 35 36 37 38 39 41 41 41 42 44 48 49 50 58 58 60 61 62 63 65 65 77 78
explist              : 25 78
funcdec              : 5
iddec                : 14 15
idlist               : 6 14
lvalue               : 12 13 59 63
operator             : 65
ostmt                : 31 33 34 35 36 38
paramdec             : 18 19
paramdecs            : 7 8
paramdecslist        : 16 19
program              : 0
relop                : 58
simple               : 43
stmt                 : 23
stmtlist             : 22 23 28
type                 : 6 7 20 21
vardec               : 4 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> . declist dec
    (3) declist -> . eps
    (80) eps -> .

    MAIN            reduce using rule 80 (eps -> .)
    FUNCTION        reduce using rule 80 (eps -> .)
    ID              reduce using rule 80 (eps -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2
    eps                            shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (2) declist -> declist . dec
    (4) dec -> . vardec
    (5) dec -> . funcdec
    (6) vardec -> . idlist COLON type SEMICOLON
    (7) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (8) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (14) idlist -> . idlist COMMA iddec
    (15) idlist -> . iddec
    (12) iddec -> . lvalue ASSIGN exp
    (13) iddec -> . lvalue
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB

    MAIN            shift and go to state 4
    FUNCTION        shift and go to state 9
    ID              shift and go to state 10

    dec                            shift and go to state 5
    vardec                         shift and go to state 6
    funcdec                        shift and go to state 7
    idlist                         shift and go to state 8
    iddec                          shift and go to state 11
    lvalue                         shift and go to state 12

state 3

    (3) declist -> eps .

    MAIN            reduce using rule 3 (declist -> eps .)
    FUNCTION        reduce using rule 3 (declist -> eps .)
    ID              reduce using rule 3 (declist -> eps .)


state 4

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 13


state 5

    (2) declist -> declist dec .

    MAIN            reduce using rule 2 (declist -> declist dec .)
    FUNCTION        reduce using rule 2 (declist -> declist dec .)
    ID              reduce using rule 2 (declist -> declist dec .)


state 6

    (4) dec -> vardec .

    MAIN            reduce using rule 4 (dec -> vardec .)
    FUNCTION        reduce using rule 4 (dec -> vardec .)
    ID              reduce using rule 4 (dec -> vardec .)


state 7

    (5) dec -> funcdec .

    MAIN            reduce using rule 5 (dec -> funcdec .)
    FUNCTION        reduce using rule 5 (dec -> funcdec .)
    ID              reduce using rule 5 (dec -> funcdec .)


state 8

    (6) vardec -> idlist . COLON type SEMICOLON
    (14) idlist -> idlist . COMMA iddec

    COLON           shift and go to state 14
    COMMA           shift and go to state 15


state 9

    (7) funcdec -> FUNCTION . ID LRB paramdecs RRB COLON type block
    (8) funcdec -> FUNCTION . ID LRB paramdecs RRB block

    ID              shift and go to state 16


state 10

    (25) lvalue -> ID . LRB explist RRB
    (26) lvalue -> ID .
    (27) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 17
    ASSIGN          reduce using rule 26 (lvalue -> ID .)
    COLON           reduce using rule 26 (lvalue -> ID .)
    COMMA           reduce using rule 26 (lvalue -> ID .)
    GT              reduce using rule 26 (lvalue -> ID .)
    GE              reduce using rule 26 (lvalue -> ID .)
    LT              reduce using rule 26 (lvalue -> ID .)
    LE              reduce using rule 26 (lvalue -> ID .)
    EQ              reduce using rule 26 (lvalue -> ID .)
    NE              reduce using rule 26 (lvalue -> ID .)
    AND             reduce using rule 26 (lvalue -> ID .)
    OR              reduce using rule 26 (lvalue -> ID .)
    SUM             reduce using rule 26 (lvalue -> ID .)
    SUB             reduce using rule 26 (lvalue -> ID .)
    MUL             reduce using rule 26 (lvalue -> ID .)
    DIV             reduce using rule 26 (lvalue -> ID .)
    MOD             reduce using rule 26 (lvalue -> ID .)
    RRB             reduce using rule 26 (lvalue -> ID .)
    RSB             reduce using rule 26 (lvalue -> ID .)
    SEMICOLON       reduce using rule 26 (lvalue -> ID .)
    LSB             shift and go to state 18


state 11

    (15) idlist -> iddec .

    COLON           reduce using rule 15 (idlist -> iddec .)
    COMMA           reduce using rule 15 (idlist -> iddec .)


state 12

    (12) iddec -> lvalue . ASSIGN exp
    (13) iddec -> lvalue .

    ASSIGN          shift and go to state 19
    COLON           reduce using rule 13 (iddec -> lvalue .)
    COMMA           reduce using rule 13 (iddec -> lvalue .)


state 13

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 20


state 14

    (6) vardec -> idlist COLON . type SEMICOLON
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    BOOLEAN         shift and go to state 24

    type                           shift and go to state 21

state 15

    (14) idlist -> idlist COMMA . iddec
    (12) iddec -> . lvalue ASSIGN exp
    (13) iddec -> . lvalue
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB

    ID              shift and go to state 10

    iddec                          shift and go to state 25
    lvalue                         shift and go to state 12

state 16

    (7) funcdec -> FUNCTION ID . LRB paramdecs RRB COLON type block
    (8) funcdec -> FUNCTION ID . LRB paramdecs RRB block

    LRB             shift and go to state 26


state 17

    (25) lvalue -> ID LRB . explist RRB
    (77) explist -> . exp
    (78) explist -> . explist COMMA exp
    (79) explist -> . eps
    (58) exp -> . exp relop exp
    (59) exp -> . lvalue
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (62) exp -> . LRB exp RRB
    (63) exp -> . lvalue ASSIGN exp
    (64) exp -> . const
    (65) exp -> . exp operator exp
    (80) eps -> .
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . TRUE
    (76) const -> . FALSE

    SUB             shift and go to state 32
    NOT             shift and go to state 33
    LRB             shift and go to state 27
    RRB             reduce using rule 80 (eps -> .)
    COMMA           reduce using rule 80 (eps -> .)
    ID              shift and go to state 10
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    explist                        shift and go to state 28
    exp                            shift and go to state 29
    eps                            shift and go to state 30
    lvalue                         shift and go to state 31
    const                          shift and go to state 34

state 18

    (27) lvalue -> ID LSB . exp RSB
    (58) exp -> . exp relop exp
    (59) exp -> . lvalue
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (62) exp -> . LRB exp RRB
    (63) exp -> . lvalue ASSIGN exp
    (64) exp -> . const
    (65) exp -> . exp operator exp
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . TRUE
    (76) const -> . FALSE

    SUB             shift and go to state 32
    NOT             shift and go to state 33
    LRB             shift and go to state 27
    ID              shift and go to state 10
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 39
    lvalue                         shift and go to state 31
    const                          shift and go to state 34

state 19

    (12) iddec -> lvalue ASSIGN . exp
    (58) exp -> . exp relop exp
    (59) exp -> . lvalue
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (62) exp -> . LRB exp RRB
    (63) exp -> . lvalue ASSIGN exp
    (64) exp -> . const
    (65) exp -> . exp operator exp
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . TRUE
    (76) const -> . FALSE

    SUB             shift and go to state 32
    NOT             shift and go to state 33
    LRB             shift and go to state 27
    ID              shift and go to state 10
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    lvalue                         shift and go to state 31
    exp                            shift and go to state 40
    const                          shift and go to state 34

state 20

    (1) program -> declist MAIN LRB RRB . block
    (22) block -> . LCB stmtlist RCB

    LCB             shift and go to state 42

    block                          shift and go to state 41

state 21

    (6) vardec -> idlist COLON type . SEMICOLON

    SEMICOLON       shift and go to state 43


state 22

    (9) type -> INTEGER .

    SEMICOLON       reduce using rule 9 (type -> INTEGER .)
    COMMA           reduce using rule 9 (type -> INTEGER .)
    RRB             reduce using rule 9 (type -> INTEGER .)
    LCB             reduce using rule 9 (type -> INTEGER .)


state 23

    (10) type -> FLOAT .

    SEMICOLON       reduce using rule 10 (type -> FLOAT .)
    COMMA           reduce using rule 10 (type -> FLOAT .)
    RRB             reduce using rule 10 (type -> FLOAT .)
    LCB             reduce using rule 10 (type -> FLOAT .)


state 24

    (11) type -> BOOLEAN .

    SEMICOLON       reduce using rule 11 (type -> BOOLEAN .)
    COMMA           reduce using rule 11 (type -> BOOLEAN .)
    RRB             reduce using rule 11 (type -> BOOLEAN .)
    LCB             reduce using rule 11 (type -> BOOLEAN .)


state 25

    (14) idlist -> idlist COMMA iddec .

    COLON           reduce using rule 14 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 14 (idlist -> idlist COMMA iddec .)


state 26

    (7) funcdec -> FUNCTION ID LRB . paramdecs RRB COLON type block
    (8) funcdec -> FUNCTION ID LRB . paramdecs RRB block
    (16) paramdecs -> . paramdecslist
    (17) paramdecs -> . eps
    (18) paramdecslist -> . paramdec
    (19) paramdecslist -> . paramdecslist COMMA paramdec
    (80) eps -> .
    (20) paramdec -> . ID LSB RSB COLON type
    (21) paramdec -> . ID COLON type

    RRB             reduce using rule 80 (eps -> .)
    ID              shift and go to state 44

    paramdecs                      shift and go to state 45
    paramdecslist                  shift and go to state 46
    eps                            shift and go to state 47
    paramdec                       shift and go to state 48

state 27

    (62) exp -> LRB . exp RRB
    (58) exp -> . exp relop exp
    (59) exp -> . lvalue
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (62) exp -> . LRB exp RRB
    (63) exp -> . lvalue ASSIGN exp
    (64) exp -> . const
    (65) exp -> . exp operator exp
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . TRUE
    (76) const -> . FALSE

    SUB             shift and go to state 32
    NOT             shift and go to state 33
    LRB             shift and go to state 27
    ID              shift and go to state 10
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 49
    lvalue                         shift and go to state 31
    const                          shift and go to state 34

state 28

    (25) lvalue -> ID LRB explist . RRB
    (78) explist -> explist . COMMA exp

    RRB             shift and go to state 50
    COMMA           shift and go to state 51


state 29

    (77) explist -> exp .
    (58) exp -> exp . relop exp
    (65) exp -> exp . operator exp
    (52) relop -> . GT
    (53) relop -> . GE
    (54) relop -> . LT
    (55) relop -> . LE
    (56) relop -> . EQ
    (57) relop -> . NE
    (66) operator -> . AND
    (67) operator -> . OR
    (68) operator -> . SUM
    (69) operator -> . SUB
    (70) operator -> . MUL
    (71) operator -> . DIV
    (72) operator -> . MOD

    RRB             reduce using rule 77 (explist -> exp .)
    COMMA           reduce using rule 77 (explist -> exp .)
    GT              shift and go to state 54
    GE              shift and go to state 55
    LT              shift and go to state 56
    LE              shift and go to state 57
    EQ              shift and go to state 58
    NE              shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61
    SUM             shift and go to state 62
    SUB             shift and go to state 63
    MUL             shift and go to state 64
    DIV             shift and go to state 65
    MOD             shift and go to state 66

    relop                          shift and go to state 52
    operator                       shift and go to state 53

state 30

    (79) explist -> eps .

    RRB             reduce using rule 79 (explist -> eps .)
    COMMA           reduce using rule 79 (explist -> eps .)


state 31

    (59) exp -> lvalue .
    (63) exp -> lvalue . ASSIGN exp

    GT              reduce using rule 59 (exp -> lvalue .)
    GE              reduce using rule 59 (exp -> lvalue .)
    LT              reduce using rule 59 (exp -> lvalue .)
    LE              reduce using rule 59 (exp -> lvalue .)
    EQ              reduce using rule 59 (exp -> lvalue .)
    NE              reduce using rule 59 (exp -> lvalue .)
    AND             reduce using rule 59 (exp -> lvalue .)
    OR              reduce using rule 59 (exp -> lvalue .)
    SUM             reduce using rule 59 (exp -> lvalue .)
    SUB             reduce using rule 59 (exp -> lvalue .)
    MUL             reduce using rule 59 (exp -> lvalue .)
    DIV             reduce using rule 59 (exp -> lvalue .)
    MOD             reduce using rule 59 (exp -> lvalue .)
    RRB             reduce using rule 59 (exp -> lvalue .)
    COMMA           reduce using rule 59 (exp -> lvalue .)
    RSB             reduce using rule 59 (exp -> lvalue .)
    COLON           reduce using rule 59 (exp -> lvalue .)
    SEMICOLON       reduce using rule 59 (exp -> lvalue .)
    ASSIGN          shift and go to state 67


state 32

    (60) exp -> SUB . exp
    (58) exp -> . exp relop exp
    (59) exp -> . lvalue
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (62) exp -> . LRB exp RRB
    (63) exp -> . lvalue ASSIGN exp
    (64) exp -> . const
    (65) exp -> . exp operator exp
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . TRUE
    (76) const -> . FALSE

    SUB             shift and go to state 32
    NOT             shift and go to state 33
    LRB             shift and go to state 27
    ID              shift and go to state 10
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 68
    lvalue                         shift and go to state 31
    const                          shift and go to state 34

state 33

    (61) exp -> NOT . exp
    (58) exp -> . exp relop exp
    (59) exp -> . lvalue
    (60) exp -> . SUB exp
    (61) exp -> . NOT exp
    (62) exp -> . LRB exp RRB
    (63) exp -> . lvalue ASSIGN exp
    (64) exp -> . const
    (65) exp -> . exp operator exp
    (25) lvalue -> . ID LRB explist RRB
    (26) lvalue -> . ID
    (27) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . TRUE
    (76) const -> . FALSE

    SUB             shift and go to state 32
    NOT             shift and go to state 33
    LRB             shift and go to state 27
    ID              shift and go to state 10
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 69
    lvalue                         shift and go to state 31
    const                          shift and go to state 34

state 34

    (64) exp -> const .

    GT              reduce using rule 64 (exp -> const .)
    GE              reduce using rule 64 (exp -> const .)
    LT              reduce using rule 64 (exp -> const .)
    LE              reduce using rule 64 (exp -> const .)
    EQ              reduce using rule 64 (exp -> const .)
    NE              reduce using rule 64 (exp -> const .)
    AND             reduce using rule 64 (exp -> const .)
    OR              reduce using rule 64 (exp -> const .)
    SUM             reduce using rule 64 (exp -> const .)
    SUB             reduce using rule 64 (exp -> const .)
    MUL             reduce using rule 64 (exp -> const .)
    DIV             reduce using rule 64 (exp -> const .)
    MOD             reduce using rule 64 (exp -> const .)
    RRB             reduce using rule 64 (exp -> const .)
    COMMA           reduce using rule 64 (exp -> const .)
    RSB             reduce using rule 64 (exp -> const .)
    COLON           reduce using rule 64 (exp -> const .)
    SEMICOLON       reduce using rule 64 (exp -> const .)


state 35

    (73) const -> INTEGERNUMBER .

    GT              reduce using rule 73 (const -> INTEGERNUMBER .)
    GE              reduce using rule 73 (const -> INTEGERNUMBER .)
    LT              reduce using rule 73 (const -> INTEGERNUMBER .)
    LE              reduce using rule 73 (const -> INTEGERNUMBER .)
    EQ              reduce using rule 73 (const -> INTEGERNUMBER .)
    NE              reduce using rule 73 (const -> INTEGERNUMBER .)
    AND             reduce using rule 73 (const -> INTEGERNUMBER .)
    OR              reduce using rule 73 (const -> INTEGERNUMBER .)
    SUM             reduce using rule 73 (const -> INTEGERNUMBER .)
    SUB             reduce using rule 73 (const -> INTEGERNUMBER .)
    MUL             reduce using rule 73 (const -> INTEGERNUMBER .)
    DIV             reduce using rule 73 (const -> INTEGERNUMBER .)
    MOD             reduce using rule 73 (const -> INTEGERNUMBER .)
    RRB             reduce using rule 73 (const -> INTEGERNUMBER .)
    COMMA           reduce using rule 73 (const -> INTEGERNUMBER .)
    RSB             reduce using rule 73 (const -> INTEGERNUMBER .)
    COLON           reduce using rule 73 (const -> INTEGERNUMBER .)
    SEMICOLON       reduce using rule 73 (const -> INTEGERNUMBER .)


state 36

    (74) const -> FLOATNUMBER .

    GT              reduce using rule 74 (const -> FLOATNUMBER .)
    GE              reduce using rule 74 (const -> FLOATNUMBER .)
    LT              reduce using rule 74 (const -> FLOATNUMBER .)
    LE              reduce using rule 74 (const -> FLOATNUMBER .)
    EQ              reduce using rule 74 (const -> FLOATNUMBER .)
    NE              reduce using rule 74 (const -> FLOATNUMBER .)
    AND             reduce using rule 74 (const -> FLOATNUMBER .)
    OR              reduce using rule 74 (const -> FLOATNUMBER .)
    SUM             reduce using rule 74 (const -> FLOATNUMBER .)
    SUB             reduce using rule 74 (const -> FLOATNUMBER .)
    MUL             reduce using rule 74 (const -> FLOATNUMBER .)
    DIV             reduce using rule 74 (const -> FLOATNUMBER .)
    MOD             reduce using rule 74 (const -> FLOATNUMBER .)
    RRB             reduce using rule 74 (const -> FLOATNUMBER .)
    COMMA           reduce using rule 74 (const -> FLOATNUMBER .)
    RSB             reduce using rule 74 (const -> FLOATNUMBER .)
    COLON           reduce using rule 74 (const -> FLOATNUMBER .)
    SEMICOLON       reduce using rule 74 (const -> FLOATNUMBER .)


state 37

    (75) const -> TRUE .

    GT              reduce using rule 75 (const -> TRUE .)
    GE              reduce using rule 75 (const -> TRUE .)
    LT              reduce using rule 75 (const -> TRUE .)
    LE              reduce using rule 75 (const -> TRUE .)
    EQ              reduce using rule 75 (const -> TRUE .)
    NE              reduce using rule 75 (const -> TRUE .)
    AND             reduce using rule 75 (const -> TRUE .)
    OR              reduce using rule 75 (const -> TRUE .)
    SUM             reduce using rule 75 (const -> TRUE .)
    SUB             reduce using rule 75 (const -> TRUE .)
    MUL             reduce using rule 75 (const -> TRUE .)
    DIV             reduce using rule 75 (const -> TRUE .)
    MOD             reduce using rule 75 (const -> TRUE .)
    RRB             reduce using rule 75 (const -> TRUE .)
    COMMA           reduce using rule 75 (const -> TRUE .)
    RSB             reduce using rule 75 (const -> TRUE .)
    COLON           reduce using rule 75 (const -> TRUE .)
    SEMICOLON       reduce using rule 75 (const -> TRUE .)


state 38

    (76) const -> FALSE .

    GT              reduce using rule 76 (const -> FALSE .)
    GE              reduce using rule 76 (const -> FALSE .)
    LT              reduce using rule 76 (const -> FALSE .)
    LE              reduce using rule 76 (const -> FALSE .)
    EQ              reduce using rule 76 (const -> FALSE .)
    NE              reduce using rule 76 (const -> FALSE .)
    AND             reduce using rule 76 (const -> FALSE .)
    OR              reduce using rule 76 (const -> FALSE .)
    SUM             reduce using rule 76 (const -> FALSE .)
    SUB             reduce using rule 76 (const -> FALSE .)
    MUL             reduce using rule 76 (const -> FALSE .)
    DIV             reduce using rule 76 (const -> FALSE .)
    MOD             reduce using rule 76 (const -> FALSE .)
    RRB             reduce using rule 76 (const -> FALSE .)
    COMMA           reduce using rule 76 (const -> FALSE .)
    RSB             reduce using rule 76 (const -> FALSE .)
    COLON           reduce using rule 76 (const -> FALSE .)
    SEMICOLON       reduce using rule 76 (const -> FALSE .)


state 39

    (27) lvalue -> ID LSB exp . RSB
    (58) exp -> exp . relop exp
    (65) exp -> exp . operator exp
    (52) relop -> . GT
    (53) relop -> . GE
    (54) relop -> . LT
    (55) relop -> . LE
    (56) relop -> . EQ
    (57) relop -> . NE
    (66) operator -> . AND
    (67) operator -> . OR
    (68) operator -> . SUM
    (69) operator -> . SUB
    (70) operator -> . MUL
    (71) operator -> . DIV
    (72) operator -> . MOD

    RSB             shift and go to state 70
    GT              shift and go to state 54
    GE              shift and go to state 55
    LT              shift and go to state 56
    LE              shift and go to state 57
    EQ              shift and go to state 58
    NE              shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61
    SUM             shift and go to state 62
    SUB             shift and go to state 63
    MUL             shift and go to state 64
    DIV             shift and go to state 65
    MOD             shift and go to state 66

    relop                          shift and go to state 52
    operator                       shift and go to state 53

state 40

    (12) iddec -> lvalue ASSIGN exp .
    (58) exp -> exp . relop exp
    (65) exp -> exp . operator exp
    (52) relop -> . GT
    (53) relop -> . GE
    (54) relop -> . LT
    (55) relop -> . LE
    (56) relop -> . EQ
    (57) relop -> . NE
    (66) operator -> . AND
    (67) operator -> . OR
